syntax = "proto3";
package failover;

import "google/protobuf/timestamp.proto";

service Failover {
  rpc health_check(Empty) returns (HealthCheckResponse) {}
  rpc pause(PauseRequest) returns (PauseResponse) {}
  rpc resume(Empty) returns (ResumeResponse) {}
  rpc migrate(Empty) returns (MigrateResponse) {}
  rpc unmigrate(Empty) returns (UnmigrateResponse) {}
}

message Empty {} // for all null requests

message HealthCheckResponse {
  enum Status {
    UNKNOWN = 0;
    HEALTHY = 1;
    UNHEALTHY = 2;
  }

  Status status = 1;
}

message PauseRequest {
  int32 timeout = 1;
  int32 expiry = 2;
}

message PauseResponse {
  google.protobuf.Timestamp created_at = 1;
  google.protobuf.Timestamp expires_at = 2;
}

message ResumeResponse {
  google.protobuf.Timestamp created_at = 1;
}

message MigrateResponse {
  string migrating_to = 1;
  string address = 2;
  google.protobuf.Timestamp created_at = 3;
}

message UnmigrateResponse {
  google.protobuf.Timestamp created_at = 1;
}
